[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Aashish Sharma <aashish2057@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"]}
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]}
config = "0.13"
uuid = { version = "1", features = ["v4"]}
chrono = { version = "0.4.22", default-features = false, features= ["clock"]}
env_logger = "0.9"
log = "0.4"
tracing = { version = "0.1", features = ["log"]}
[dev-dependencies]
reqwest = "0.11.17"


